[package]
name = "sqck"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sequoia-openpgp = "0.13"
nettle-sys = { version = "2.0.4", features = ["vendored"] }
